<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2018 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
...
    <string name="stage">Stage</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    
    <string name="select_all">Select all</string>
...

    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>


    <!-- Action Mode Titles -->
...

    <!-- Rename Dialog Titles -->
    <string name="rename_project">Rename project</string>
    <string name="rename_scene_dialog">Rename scene</string>
    <string name="rename_sprite_dialog">Rename actor or object</string>
    <string name="rename_look_dialog">Rename look</string>
    <string name="rename_sound_dialog">Rename sound</string>
    <string name="rename_nfctag_dialog">Rename NFC tag</string>
    <string name="rename_data_dialog">Rename</string>

    <!-- New Script Group Dialog -->
    <string name="new_group">New group</string>

...
    <string name="add_look_media_library">Media library</string>
    <string name="add_look_drone_video">AR.Drone 2.0 video</string>
    <!--  -->

    <!-- NewSoundDialog -->
    <string name="new_sound_dialog_title">Add sound</string>
    <string name="add_sound_from_recorder">Record sound</string>
    <string name="add_sound_choose_file">Select file</string>
    <string name="add_sound_music">Music composer</string>

    <!-- Rating Dialog -->
    <string name="rating_dialog_title">Rate App</string>
    <string name="rating_google_play_dialog_text">If you enjoy this app, please rate us on the App store.</string>
...
    <string name="save_project_to_external_storage_io_exception_message">Failed to save project, not enough memory is available!</string>
    <!--  -->

    <!-- SoundRecorderActivity -->
    <string name="soundrecorder_name">Sound recorder</string>
    <string name="soundrecorder_error">Sound recording failed</string>
    <string name="soundrecorder_recorded_filename">recording</string>
    <string name="soundrecorder_text_view">Tap the icon above to start and stop recording.</string>
    <!--  -->

    <!-- Brick context dialog -->
    <string name="brick_context_dialog_move_brick">Move Brick</string>
    <string name="brick_context_dialog_move_script">Move script</string>
...
    <string name="brick_clear_background">Clear</string>
    <string name="brick_stamp">Stamp</string>
    <!--  -->


    <!-- Sound bricks -->
    <string name="brick_play_sound">Start sound</string>
    <string name="brick_play_sound_and_wait">Start sound and wait</string>
    <string name="brick_stop_all_sounds">Stop all sounds</string>
    <string name="brick_set_volume_to">Set volume to</string>
    <string name="brick_change_volume_by">Change volume by</string>
    <string name="brick_speak">Speak</string>
    <string name="brick_speak_default_value">Hello!</string>
    <string name="brick_speak_and_wait">and wait</string>
    <!--  -->

    <!-- Control bricks -->
    <string name="brick_when_started">When scene starts</string>
    <string name="brick_when">When tapped</string>
    <string name="brick_when_condition_when">When</string>
    <string name="brick_when_becomes_true">becomes true</string>
    <string name="brick_wait">Wait</string>
    <string name="brick_when_gamepad_button">When gamepad button</string>
    <string name="brick_when_gamepad_button_tapped">tapped</string>
...
        <item quantity="other">"seconds"</item>
    </plurals>

    <string name="brick_collision_receive">When you bounce off</string>
    <string name="collision_with_anything">any edge, actor, or object</string>

    <string name="brick_broadcast_receive">When you receive</string>
    <string name="brick_broadcast">Broadcast</string>
    <string name="brick_broadcast_wait">Broadcast and wait</string>
    <string name="brick_scene_transition">Continue scene</string>
    <string name="brick_scene_start">Start scene</string>
    <string name="brick_note">Note</string>
    <string name="brick_think_bubble">Think</string>
    <string name="brick_say_bubble">Say</string>
...
