...
        <TextView
            android:id="@+id/brick_broadcast_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_broadcast" />

        <Spinner
            android:id="@+id/brick_broadcast_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:textDirection="locale"
            android:focusable="false" />
    </org.catrobat.catroid.ui.BrickLayout >
...
