...
            android:id="@+id/brick_play_sound_and_wait_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_play_sound_and_wait" >
        </TextView >

        <Spinner
            android:id="@+id/playsound_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false" />
    </org.catrobat.catroid.ui.BrickLayout >

...
