...
    <string name="brick_if_begin_second_part">is true then</string>
    <string name="brick_if_else">Else</string>
    <string name="brick_if_end">End If</string>
    <string name="brick_broadcast_invalid_symbol">"Message reserved for:\n\"When physical collision between\"-Brick\nPlease try again!"</string>
    <string name="brick_set_variable">Set variable</string>
    <string name="brick_change_variable">Change variable</string>
    <string name="brick_variable_spinner_create_new_variable">New…</string>
    <string name="brick_note_default_value">"add comment here…"</string>
    <string name="brick_broadcast_default_value">"message 1"</string>
    <string name="brick_add_item_to_userlist_add">Add</string>
    <string name="brick_add_item_to_userlist">to list</string>
    <string name="brick_delete_item_from_userlist_delete">Delete item from list</string>
    <string name="brick_delete_item_from_userlist">at position</string>
...
